--- a/member.html
+++ b/member.html
@@ -24,7 +24,7 @@
         <div class="members-section">
             <h1>Our Members</h1>
             <ul>
-                <li>AL ANDREW RUTAMULA</li>
+                <li>AL ANDREW ROTAMULA</li>
                 <li>ED MAREY PITO</li>
                 <li>JHON ARFRED ALTAREJOS</li>
                 <li>MARC BERNARD ADOR</li>
